final edits to text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <main>
         <section>
           <h2>Biography</h2>
-          <p>Biography</p>
+          <p>Valton Jones was born in Texas and has lived in every corner of the United States. He prefers the Pacific North West but has a soft spot for New Orleans. He is nearsighted, talks too much, and desperately needs to learn to code. His fixation with his facial hair is seconded only by his lack of a sense of humor. Ignore this section entirely as all the answers to the quiz are elsewhere.</p>
           <img src="./img/IMG_1187.jpg">
         </section>
         <section>
