--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
             <li>University of Washington</li>
             <li>University of Florida</li>
           </ul>
+          <h3>Work History</h3>
+          <ul>
+            <li>Instructor, University of Florida</li>
+            <li>Bartender, Chophouse Restaurant, New Orleans, LA</li>
+            <li>Corporate Trainer, Cousins Restaurant Group, New Orleans LA</li>
+            <li>Operations Specialist, USN</li>
+          </ul>
+          </section>
+          <section>
+          <h3>Top Ten Favorite Washington Hikes</h3>
+          <ol>
+            <li>The Brothers</li>
+            <li>Table Mountain</li>
+            <li>The Hoh Rainforest</li>
+            <li>Tubal Cain Mine</li>
+            <li>Gold Mountain</li>
+            <li>Green Mountain</li>
+            <li>Mount Jupiter</li>
+            <li>Upper Snohomish</li>
+            <li>Bridal Veil Falls</li>
+            <li>Hurricane Ridge</li>
+          </ol>
         </section>
       </main>
       <footer>Coded by Valton Jones</footer>
@@ -45,3 +67,5 @@
 
 
   </html>
+            
+          
